# effective-c

01_Getting_Started_With_C/: CMakeLists.txt  hello  hello.c
02_Objects_Functions_and_Types/: CMakeLists.txt  alignment.c  exercises.c  object_types.c  scope_example.c  storage.c  swap_1.c  swap_2.c
03_Arithmetic_Types/: CMakeLists.txt  library.c  library.h
