cmake_minimum_required(VERSION 3.17)
project(02_Objects_Functions_and_Types C)

set(CMAKE_C_STANDARD 11)

add_executable(swap1 swap_1.c)
add_executable(swap2 swap_2.c)
add_executable(scope_example scope_example.c)
add_executable(storage storage.c)
add_executable(alignment alignment.c)
add_executable(object_types object_types.c)
add_executable(exercises exercises.c)